--- a/css/main.css
+++ b/css/main.css
@@ -31,49 +31,124 @@ button {
 .clf {
   overflow: hidden;
 }
-.content {
-  width: 100%;
-  background: #ffffff;
+:root {
+  --i: 0;
 }
-.content .container {
-  border: 1px solid pink;
-  width: 1226px;
-  height: 332px;
-  margin: 0 auto;
-}
-.content .container .footer-service .list-service {
+body {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background: #0001;
 }
-.content .container .footer-service .list-service li ~ li::before {
+body .card {
+  position: relative;
+  width: 550px;
+  height: 320px;
+  background: #fff;
+  border-radius: 20px;
+  box-shadow: 0 0 50px 25px pink;
+}
+body .card [name=select] {
+  display: none;
+}
+body .card .slide {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+  z-index: 9;
+}
+body .card .slide label {
+  display: inline-block;
+  position: relative;
+  width: 50px;
+  height: 10px;
+  background: #d9d9d9;
+  border-radius: 10px;
+  margin: 0 3px;
+  cursor: pointer;
+}
+body .card .slide label::before {
   content: '';
   position: absolute;
-  background-color: #e0e0e0;
-  width: 1px;
-  height: 50px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.content .container .footer-service .list-service li {
-  width: 20%;
-  height: 79px;
-  line-height: 25px;
-  padding: 27px 0;
-  text-align: center;
-}
-.content .container .footer-service .list-service li:hover {
-  background: #e0e0e0;
-}
-.content .container .footer-service .list-service li a {
+  display: block;
   width: 100%;
   height: 100%;
-  text-align: center;
-  font-size: 16px;
-  color: #616161;
+  background: #F44336;
+  border-radius: 10px;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s;
 }
-.content .container .footer-service .list-service li a:hover {
-  color: #ff6700;
-  background: transparent;
+body .card .slide label:hover::before {
+  transform: scaleX(1);
+}
+body .card .content {
+  display: flex;
+  visibility: hidden;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  height: 320px;
+  padding-left: 25px;
+}
+body .card .content .pic {
+  width: 180px;
+  height: 180px;
+  border-radius: 20px;
+  box-shadow: 0 10px 50px #0006;
+  overflow: hidden;
+}
+body .card .content .pic img {
+  width: 100%;
+  height: 100%;
+}
+body .card .content .text {
+  width: 300px;
+  padding-left: 20px;
+  margin-left: 20px;
+}
+body .card .content .text .title {
+  font-size: 30px;
+  font-weight: 700;
+  color: #0d0925;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+body .card .content .text .info {
+  font-size: 18px;
+  color: #757575;
+  margin-bottom: 10px;
+  line-height: 1.2em;
+  text-align: justify;
+}
+body .card .content .text .btn {
+  padding: 10px 15px;
+  border-radius: 50px;
+  letter-spacing: 1px;
+  font-size: 14px;
+  border: none;
+  color: #F1F8E9;
+  font-weight: 600;
+  background: #000;
+  float: right;
+  z-index: 12;
+}
+body .card .content .text .btn:hover {
+  background: #9FA8DA;
+  color: #FF7043;
+}
+body .card #slide_1:checked ~ .con1,
+body .card #slide_2:checked ~ .con2,
+body .card #slide_3:checked ~ .con3 {
+  visibility: visible;
+}
+body .card #slide_1:checked ~ .slide .slide_btn_1,
+body .card #slide_2:checked ~ .slide .slide_btn_2,
+body .card #slide_3:checked ~ .slide .slide_btn_3 {
+  background: #F44336;
 }
