--- a/css/main.less
+++ b/css/main.less
@@ -9,61 +9,141 @@ input,button {outline: none;}
 
 .clb::after {clear: both;}
 .clf {overflow: hidden;}
+:root {
+    --i: 0;
+}
 
-.content {
-    width: 100%;
-    background: #ffffff;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background: #0001;
 
-    .container {
-        border: 1px solid pink;
-        width: 1226px;
-        height: 332px;
-        margin: 0 auto;
+    .card {
+        position: relative;
+        width: 550px;
+        height: 320px;
+        background: #fff;
+        border-radius: 20px;
+        box-shadow: 0 0 50px 25px pink;
 
-        .footer-service {
-            .list-service {
-                display: flex;
-                justify-content: space-around;
-                align-items: center;
+        [name=select] {
+            display: none;
+        }
+        .slide {
+            position: absolute;
+            bottom: 20px;
+            width: 100%;
+            text-align: center;
+            z-index: 9;
+
+            label {
+                display: inline-block;
                 position: relative;
+                width: 50px;
+                height: 10px;
+                background: #d9d9d9;
+                border-radius: 10px;
+                margin: 0 3px;
+                cursor: pointer;
 
-                li~li::before {
+                &::before {
                     content: '';
                     position: absolute;
-                    background-color: #e0e0e0;
-                    width: 1px;
-                    height: 50px;
-                    top: 50%;
-                    transform: translateY(-50%);
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    background: #F44336;
+                    border-radius: 10px;
+                    top: 0;
+                    left: 0;
+                    transform: scaleX(0);
+                    transform-origin: left;
+                    transition: transform .5s;
                 }
 
-                li {
-                    width: 20%;
-                    height: 79px;
-                    line-height: 25px;
-                    padding: 27px 0;
-                    text-align: center;
+                &:hover::before {
+                    transform: scaleX(1);
+                }
+            }
+        }
 
-                    &:hover  {
-                        background: #e0e0e0;
-                    }
-                    a {
-                        width: 100%;height: 100%;
+        .content {
+            display: flex;
+            visibility: hidden;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            height: 320px;
+            padding-left: 25px;
 
-                        text-align: center;
-                        font-size: 16px;
-                        color: #616161;
+            .pic {
+                width: 180px;
+                height: 180px;
+                border-radius: 20px;
+                box-shadow: 0 10px 50px #0006;
+                overflow: hidden;
 
-                        &:hover {
-                            color: #ff6700;
-                            background: transparent;
-                        }
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .text {
+                width: 300px;
+                padding-left: 20px;
+                margin-left: 20px;
+
+                .title {
+                    font-size: 30px;
+                    font-weight: 700;
+                    color: #0d0925;
+                    margin-bottom: 10px;
+                    text-transform: uppercase;
+                }
+
+                .info {
+                    font-size: 18px;
+                    color: #757575;
+                    margin-bottom: 10px;
+                    line-height: 1.2em;
+                    text-align: justify;
+                }
+
+                .btn {
+                    padding: 10px 15px;
+                    border-radius: 50px;
+                    letter-spacing: 1px;
+                    font-size: 14px;
+                    border: none;
+                    color: #F1F8E9;
+                    font-weight: 600;
+                    background: #000;
+                    float: right;
+                    z-index: 12;
+
+                    &:hover {
+                        background: #9FA8DA;
+                        color: #FF7043;
                     }
                 }
             }
         }
 
+        #slide_1:checked ~.con1,
+        #slide_2:checked ~.con2,
+        #slide_3:checked ~.con3
+        {
+            visibility: visible
+        }
+         #slide_1:checked~.slide .slide_btn_1,
+         #slide_2:checked~.slide .slide_btn_2,
+         #slide_3:checked~.slide .slide_btn_3 {
+             background: #F44336;
+         }
 
     }
-
 }
